--- a/project/app/views/summary.scala.html
+++ b/project/app/views/summary.scala.html
@@ -1,15 +1,18 @@
 @(perSemesterAvg: Map[(java.time.Year, models.Semester), (Int, Double)]
  ,perMajor: Map[Major, Seq[(Option[models.Course], models.Score)]]
- ,user: models.User
+ ,perMajorFut: Map[Major, Seq[(Option[models.Course], models.Score)]]
+,user: models.User
 )(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
 
 @import models.Score
 @import models.Score._
 @import scala.util.Try
+@import shared.Util.nextSemester
 
 
 @main(Messages("summary.title"), Some(user)) {
     <main class="container">
+
         <!--grade info start-->
         <div class="col-md-5">
             <h3>학기별</h3>
@@ -22,21 +25,31 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        @if(perSemesterAvg.size >= 0) {
-                            @for(t <- perSemesterAvg) {
-                                <td>@{t._1._1}@Messages("year") @Messages(t._1._2.toString)</td>
-                                <td>@t._2._1</td>
-                                <td>@{f"${t._2._2}%2.2f"}</td>
-                                }
+                    @if(perSemesterAvg.size >= 0) {
+                        @for(t <- perSemesterAvg) {
+                            @defining(nextSemester._1.toString == t._1._1.toString || nextSemester._2.toString == t._1._2.toString) { future =>
+                                <tr>
+                                @if(future) {
+                                    <td><small>@{t._1._1}@Messages("year") @Messages(t._1._2.toString)</small></td>
+                                    <td><small>@t._2._1</small></td>
+                                    <td><small>@Messages("not.sure")</small></td>
                                 } else {
-                                <td>@Messages("no.entry")</td>
+                                    <td>@{t._1._1}@Messages("year") @Messages(t._1._2.toString)</td>
+                                    <td>@t._2._1</td>
+                                    <td>@{f"${t._2._2}%2.2f"}</td>
                                 }
-                    </tr>
+                                </tr>
+                            }
+                            }
+                            } else {
+                            <td>@Messages("no.entry")</td>
+                            }
                 </tbody>
             </table>
         </div>
         <!--grade info end-->
+
+
 
         <!--summary info start-->
         <div class="col-md-6 col-md-offset-1">
@@ -68,7 +81,11 @@
                                     case _ => throw new NoSuchElementException("Invalid course by user")
                                 }
                                 .sum
-                                } / @{s._1.required}
+                                } 
+                                @if(perMajorFut.isDefinedAt(s._1)){
+                                    <small> + @{perMajorFut(s._1).map(_._1.get.creditHours).sum}</small>
+                                    }
+                                    / @{s._1.required}
                             </center></td>
 
                             @*F*@
@@ -94,24 +111,24 @@
                                 @{s ._2
                                 .filter {
                                     case (Some(course), score) => score.retakable
-                                case _ => throw new NoSuchElementException("Invalid course by user")
+                                    case _ => throw new NoSuchElementException("Invalid course by user")
                                 }
                                 .map {
                                     case (Some(course), score) => course.creditHours
-                                case _ => throw new NoSuchElementException("Invalid course by user")
+                                    case _ => throw new NoSuchElementException("Invalid course by user")
                                 }
                                 .sum
                                 }
-                                </center></td>
-                                @*평점 *@
-                                <td><center>
+                            </center></td>
+                            @*평점 *@
+                            <td><center>
                                 @{val averageScore = avg(s._2.map {
                                     case (Some(course), score) => score -> course.creditHours.toInt
                                     case _ => throw new NoSuchElementException("Invalid course by user")
                                 })
                                 f"${averageScore}%#2.2f"
                                 }
-                                </center></td>
+                            </center></td>
                         </tr>
                         }
                 </tbody>
@@ -119,6 +136,11 @@
                     <th>합계</th>
                     <td><center>
                         @perMajor.map(_._2).foldLeft(Seq[(Option[Course], Score)]())({ (acc, s) => acc ++ s }).map(p => p._1.get -> p._2).filter(p => p._2.passed).map(p => p._1.creditHours).sum
+                        @defining(perMajorFut.map(_._2).foldLeft(Seq[(Option[Course], Score)]())({ (acc, s) => acc ++ s }).map(p => p._1.get -> p._2).filter(p => p._2.passed).map(p => p._1.creditHours).sum) { futureSum =>
+                        @if(futureSum > 0) {
+                        <small> + @futureSum </small>
+                        }
+                            }
                     </center></td>
                     <td><center>
                         @perMajor.map(_._2).foldLeft(Seq[(Option[Course], Score)]())({ (acc, s) => acc ++ s }).map(p => p._1.get -> p._2).filter(p => p._2.failed).map(p => p._1.creditHours).sum
@@ -140,21 +162,48 @@
             <table class="table table-bordered">
                 @defining(perMajor.toSeq.sortBy(p => p._1.majorType.toInt)) { sortedList =>
                     <thead class="thead-bordered">
-                            @for(p <- sortedList) {
-                                <th>@Messages(p._1.majorType.toString)</th>
-                                }
-                </thead>
-                <tbody>
+                    @for(p <- sortedList) {
+                        <th>@Messages(p._1.majorType.toString)</th>
+                    }
+                    </thead>
+                    <tbody>
                     @defining(Try(sortedList.map(_._2.size).max).getOrElse(0)) { indexMax =>
                         @for(i <- 0 until indexMax) {
                             <tr>
-                            @for(m <- sortedList) {
+                             @for(m <- sortedList) {
                                 <td>@{Try(m._2(i)._1.get.name1 + " / ").toOption.getOrElse("")} @{Messages(Try(m._2(i)._2.toString).toOption.getOrElse(""))}</td>
                             }
                             </tr>
                         }
                     }
-                </tbody>
+                    </tbody>
+                }
+            </table>
+        </div>
+        <div class="column_bottom">
+            <h3>세부정보(목표)</h3>
+            <table class="table table-bordered">
+                @defining(perMajorFut.toSeq.sortBy(p => p._1.majorType.toInt)) { sortedList =>
+                    <thead class="thead-bordered">
+                    @for(p <- sortedList) {
+                        <th>@Messages(p._1.majorType.toString)</th>
+                    }
+                    </thead>
+                    <tbody>
+                    @defining(Try(sortedList.map(_._2.size).max).getOrElse(0)) { indexMax =>
+                        @if(indexMax > 0){
+                        @for(i <- 0 until indexMax) {
+                            <tr>
+                            @for(m <- sortedList) {
+                                <td>@{Try(m._2(i)._1.get.name1 + " / " + Messages("not.sure")).toOption.getOrElse("")}</td>
+                            }
+                            </tr>
+                        }
+                        } else {
+                            <td>@Messages("no.entry")</td>
+                            }
+                    }
+                    </tbody>
                 }
             </table>
         </div>
